--- a/notebooks/primaryKey_vs_foreignKey.ipynb
+++ b/notebooks/primaryKey_vs_foreignKey.ipynb
@@ -324,6 +324,20 @@
     "\n",
     "display(merged_data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Refercences\n",
+    "\n",
+    " - https://learnsql.com/blog/why-use-primary-key-foreign-key/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
